Fix broken CSS

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -26,6 +26,6 @@ footer{
 }
 
 p span.i1{
-	padding-left: -2em;
+	padding-left: 2em;
 	text-indent: 1em;
 }
